Update invitation and virtual meeting route tests
